=== HEAD

* Make sure certain alter table operations clear the schema correctly on MySQL (jeremyevans) (#301)

* Fix leak of JDBC Statement objects when using transactions on JDBC on databases that support savepoints (jeremyevans)

* Add DatabaseDisconnectError support to the ODBC adapter (Joshua Hansen)

* Make :encoding option work on MySQL in some cases where it was ignored (jeremyevans) (#300)

* Make Model::Errors#on always return nil if there are no errors on that attribute (jeremyevans)

* When using multiple plugins that add before hooks, the order that the hooks are called may have changed (jeremyevans)

* The hook_class_methods plugin no longer skips later after hooks if earlier after hooks return false (jeremyevans)

* Add Model#set_fields and update_fields, similar to set_only and update_only but ignoring other keys in the hash (jeremyevans)

* Add Model.qualified_primary_key_hash, similar to primary_key_hash but with qualified columns (jeremyevans)

* Make Model::Errors#empty? handle attributes with empty error arrays (jeremyevans)

* No longer apply association options to join table dataset when removing all many_to_many associated objects (jeremyevans)

* Log the execution times of migrations to the database's loggers (jeremyevans)

* Add a TimestampMigrator that can work with migrations where versions are timestamps, and handle migrations applied out of order (jeremyevans)

* Completely refactor Sequel::Migrator, now a class instead of a module (jeremyevans)

* Save migration version after each migration, instead of after all migrations (jeremyevans)

* Raise an error if missing a migration version (jeremyevans)

* Raise an error if using a duplicate migration version (jeremyevans)

* Add a Sequel.migration DSL for defining migrations (jeremyevans)

* Add a sharding plugin giving Sequel::Model objects support for dealing with sharding (jeremyevans)

* Handle timestamp(N) with time zone data types (hone)
