@@ -1,5 +1,7 @@
 === HEAD
 
+* Handle SQL::Identifiers in the schema_dumper extension (jeremyevans) (#304)
+
 * Make sure certain alter table operations clear the schema correctly on MySQL (jeremyevans) (#301)
 
 * Fix leak of JDBC Statement objects when using transactions on JDBC on databases that support savepoints (jeremyevans)
